kubernetes/apps/qualityspace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qualityspace
  labels:
    app.kubernetes.io/name: qualityspace
    app.kubernetes.io/part-of: qualityspace-site
